Пробуем избавится от папок VSCode

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,12 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
-.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
