--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,10 @@ $RECYCLE.BIN/
 # Operating System Files
 # =========================
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
 *.code-workspace
 
 # Local History for Visual Studio Code
