Всё передала в один пакет

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ $RECYCLE.BIN/
 # =========================
 # Operating System Files
 # =========================
+.vscode
 .vscode/*
 .vscode/settings.json
 .vscode/tasks.json
